--- a/index.html
+++ b/index.html
@@ -65,79 +65,79 @@
     </div>
 
     <div class="container-fluid bg-5 text-center" id="TOOLS" style="padding-top: 10px;">
-        <h3>What Are My Development Tools?</h3><br>
+        <h3>What Are My Development Tools?</h3>
         <div class="container">
             <div class="row">
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Asp.Net</h5>
-                        <img src="images\aspnet.png" class="size-change">
+                        <img src="images\aspnet.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>MVC</h5>
-                        <img src="images\mvc.jpg" class="size-change">
+                        <img src="images\mvc.jpg">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Web API</h5>
-                        <img src="images\webapi.jpg" class="size-change">
+                        <img src="images\webapi.jpg">
                     </div>
                     <div class="col col-sm-3">
                         <h5>WCF</h5>
-                        <img src="images\wcf.jpg" class="size-change">
+                        <img src="images\wcf.jpg">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>SQL server</h5>
-                        <img src="images\sql.png" class="size-change">
+                        <img src="images\sql.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Core</h5>
-                        <img src="images\core.png" class="size-change">
+                        <img src="images\core.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>HTML</h5>
-                        <img src="images\HTML.png" class="size-change">
+                        <img src="images\HTML.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>CSS</h5>
-                        <img src="images\css.png" class="size-change">
+                        <img src="images\css.png">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Javascript</h5>
-                        <img src="images\Javascript.png" class="size-change">
+                        <img src="images\Javascript.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>jQuery</h5>
-                        <img src="images\jQuery.png" class="size-change">
+                        <img src="images\jQuery.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Angular</h5>
-                        <img src="images\angular.png" class="size-change">
+                        <img src="images\angular.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Typescript</h5>
-                        <img src="images\typescript.png" class="size-change">
+                        <img src="images\typescript.png">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>TFS</h5>
-                        <img src="images\tfs.png" class="size-change">
+                        <img src="images\tfs.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Github</h5>
-                        <img src="images\Github.png" class="size-change">
+                        <img src="images\Github.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>NPM</h5>
-                        <img src="images\NPM.png" class="size-change">
+                        <img src="images\NPM.png">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Gulp</h5>
-                        <img src="images\Gulp.png" class="size-change">
+                        <img src="images\Gulp.png">
                     </div>
                 </div>
             </div>
@@ -145,23 +145,23 @@
     </div>
 
     <div class="container-fluid bg-3 text-center" id="TOOLS">
-        <h3>What Are My Development Methodology?</h3><br>
+        <h3>What Are My Development Methodology?</h3>
         <div class="container">
             <div class="row ">
                 <div class="col col-sm-6">
                     <h3>Agile</h3>
-                    <img class="large-img size-change" src="images\agile.png">
+                    <img class="large-img" src="images\agile.png">
                 </div>
                 <div class="col col-sm-6">
                     <h3>Waterfall</h3>
-                    <img class="large-img size-change" src="images\Waterfall.png">
+                    <img class="large-img" src="images\Waterfall.png">
                 </div>
             </div>
         </div>
     </div>
 
     <div class="container-fluid bg-1 text-center" id="SKILLS">
-        <h3>What Are My Skills?</h3><br>
+        <h3>What Are My Skills?</h3>
         <div class="container">
             <div class="row">
                 <div class="col col-sm-4">
