--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
     <div class="container-fluid bg-5 text-center" id="PORTFOLIO">
         <h3>Portfolio</h3>
-        <div class="container">
+        <div>
             <div class="row">
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="https://raw.githubusercontent.com/NilavPatel/ng-prime/master/src/assets/images/laptop.png">
                         <h4 class="title">Angular 8 admin panel theme with PrimeNG</h4>
@@ -204,42 +204,42 @@
                         </p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="https://raw.githubusercontent.com/NilavPatel/np-data-grid-package/master/src/assets/images/np-grid.png">
                         <h4 class="title">Angular 8 data grid component</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-data-grid-package">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="https://raw.githubusercontent.com/NilavPatel/np-date-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 date picker component</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-date-picker-package">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="https://raw.githubusercontent.com/NilavPatel/np-color-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 color picker component</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-color-picker-package">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="https://raw.githubusercontent.com/NilavPatel/np-time-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 time picker component</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-time-picker-package">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="images\code.png">
                         <h4 class="title">ADO.Net ORM C# with Unit testing</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/MyORM">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="images\code.png">
                         <h4 class="title">N Layered Application Architecture C#</h4>
@@ -247,10 +247,10 @@
                         </p>
                     </div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col col-sm-4 col-md-3">
                     <div class="card">
                         <img src="images\code.png">
-                        <h4 class="title">C# design patterns samples</h4>
+                        <h4 class="title">C# design patterns</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/DemoCSharp">Github</a>
                         </p>
                     </div>
