--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img src="https://raw.githubusercontent.com/NilavPatel/np-data-grid-package/master/src/assets/images/np-grid.png">
+                        <img src="https://raw.githubusercontent.com/NilavPatel/np-ui-data-grid-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 data grid component</h4>
-                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-data-grid-package">Github</a></p>
+                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/np-ui-data-grid-package">Github</a></p>
                     </div>
                 </div>
                 <div class="col col-sm-4 col-md-3">
