update color and design

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#SKILLS">SKILLS</a></li>
                     <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
                     <li><a href="#WHERE">WHERE</a></li>
-                    <li><a href="doc/Nilav-Resume.docx" target="_blank" class="link-primary"><b>RESUME</b></a></li>
+                    <li><a href="doc/Nilav-Resume.docx" target="_blank"><b>RESUME</b></a></li>
                 </ul>
             </div>
         </div>
