--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h3>What Am I?</h3>
             <p>My name is <b>Nilav Patel</b>. I have completed my Bachelor of Engineering in Information Technology from L. D. College of Engineering in 2014.</p>
             <div class="horizontal-rule"></div>
-            <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer. I love to write code, programs, algorithms. I am a passionate frontned and hardcore backend developer. I love to work with new emerging
+            <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer. I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend developer. I love to work with new emerging
                 front end technologies like Angular, Node, jQuery, Javascript. And also love to work with Microsoft technologies.
             </p>
             <div class="horizontal-rule"></div>
