--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Nilav Patel</title>
+    <title>Nilav Patel - Engineering a software</title>
     <meta charset="utf-8">
     <meta name="description" content="Nilav Patel Portfolio">
     <meta name="keywords" content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel">
@@ -65,7 +65,8 @@
         <h3>Who Am I?</h3>
         <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
             width="350" height="350">
-        <h3>I am <strong>Nilav Patel</strong>.</h3>
+        <h3>I am</h3>
+        <h1><strong>Nilav Patel</strong></h1>
     </div>
 
     <div class="container-fluid bg-2 text-center" id="WHAT">
