--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand link-primary"><img src="images/logo-large.png"></a>
+            <a class="navbar-brand link-primary"><img src="images/logo-large.png" alt="no image found"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
@@ -65,7 +65,7 @@
     <div class="container-fluid bg-1 text-center" id="WHO">
         <h3>Who Am I?</h3>
         <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
-            width="350" height="350">
+            width="350" height="350" alt="no image found">
         <h3>I am</h3>
         <h1><strong>Nilav Patel</strong></h1>
     </div>
@@ -94,73 +94,73 @@
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Asp.Net</h5>
-                        <img src="images\aspnet.png">
+                        <img src="images\aspnet.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>MVC</h5>
-                        <img src="images\mvc.jpg">
+                        <img src="images\mvc.jpg" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Web API</h5>
-                        <img src="images\webapi.jpg">
+                        <img src="images\webapi.jpg" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>WCF</h5>
-                        <img src="images\wcf.jpg">
+                        <img src="images\wcf.jpg" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>SQL server</h5>
-                        <img src="images\sql.png">
+                        <img src="images\sql.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Core</h5>
-                        <img src="images\core.png">
+                        <img src="images\core.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>HTML</h5>
-                        <img src="images\HTML.png">
+                        <img src="images\HTML.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>CSS</h5>
-                        <img src="images\css.png">
+                        <img src="images\css.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Javascript</h5>
-                        <img src="images\Javascript.png">
+                        <img src="images\Javascript.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>jQuery</h5>
-                        <img src="images\jQuery.png">
+                        <img src="images\jQuery.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Angular</h5>
-                        <img src="images\angular.png">
+                        <img src="images\angular.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Typescript</h5>
-                        <img src="images\typescript.png">
+                        <img src="images\typescript.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>TFS</h5>
-                        <img src="images\tfs.png">
+                        <img src="images\tfs.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Github</h5>
-                        <img src="images\Github.png">
+                        <img src="images\Github.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>NPM</h5>
-                        <img src="images\NPM.png">
+                        <img src="images\NPM.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Gulp</h5>
-                        <img src="images\Gulp.png">
+                        <img src="images\Gulp.png" alt="no image found">
                     </div>
                 </div>
             </div>
@@ -173,11 +173,11 @@
             <div class="row ">
                 <div class="col col-sm-6">
                     <h3>Agile</h3>
-                    <img class="large-img" src="images\agile.png">
+                    <img class="large-img" src="images\agile.png" alt="no image found">
                 </div>
                 <div class="col col-sm-6">
                     <h3>Waterfall</h3>
-                    <img class="large-img" src="images\Waterfall.png">
+                    <img class="large-img" src="images\Waterfall.png" alt="no image found">
                 </div>
             </div>
         </div>
@@ -221,7 +221,7 @@
             <div class="row">
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img
+                        <img alt="no image found"
                             src="https://raw.githubusercontent.com/NilavPatel/ng-prime/master/src/assets/images/laptop.png">
                         <h4 class="title">Angular 8 admin panel theme with PrimeNG</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/Ng-Prime">Github</a>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img
+                        <img alt="no image found"
                             src="https://raw.githubusercontent.com/NilavPatel/np-ui-data-grid-package/master/src/assets/images/image1.png">
                         <h4 class="title">Angular 8 data grid component</h4>
                         <p><a class="button" target="_blank"
@@ -239,7 +239,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img
+                        <img alt="no image found"
                             src="https://raw.githubusercontent.com/NilavPatel/np-date-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 date picker component</h4>
                         <p><a class="button" target="_blank"
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img
+                        <img alt="no image found"
                             src="https://raw.githubusercontent.com/NilavPatel/np-color-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 color picker component</h4>
                         <p><a class="button" target="_blank"
@@ -257,7 +257,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img
+                        <img alt="no image found"
                             src="https://raw.githubusercontent.com/NilavPatel/np-time-picker-package/master/src/assets/images/image1.PNG">
                         <h4 class="title">Angular 8 time picker component</h4>
                         <p><a class="button" target="_blank"
@@ -266,14 +266,14 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img src="images\code.png">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">ADO.Net ORM C# with Unit testing</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/MyORM">Github</a></p>
                     </div>
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img src="images\code.png">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">N Layered Application Architecture C#</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/NLayeredApp">Github</a>
                         </p>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img src="images\code.png">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">C# design patterns</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/DemoCSharp">Github</a>
                         </p>
