--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
             <div class="row">
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img alt="no image found"
-                            src="https://raw.githubusercontent.com/NilavPatel/ng-prime/master/src/assets/images/laptop.png">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 admin panel theme with PrimeNG</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/Ng-Prime">Github</a>
                         </p>
@@ -239,8 +238,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img alt="no image found"
-                            src="https://raw.githubusercontent.com/NilavPatel/np-ui-data-grid-package/master/src/assets/images/image1.png">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 data grid component</h4>
                         <p><a class="button" target="_blank"
                                 href="https://www.npmjs.com/package/np-ui-data-grid">NPM</a></p>
@@ -248,8 +246,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img alt="no image found"
-                            src="https://raw.githubusercontent.com/NilavPatel/np-date-picker-package/master/src/assets/images/image1.PNG">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 date picker component</h4>
                         <p><a class="button" target="_blank"
                                 href="https://www.npmjs.com/package/np-ui-date-picker">NPM</a></p>
@@ -257,8 +254,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img alt="no image found"
-                            src="https://raw.githubusercontent.com/NilavPatel/np-color-picker-package/master/src/assets/images/image1.PNG">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 color picker component</h4>
                         <p><a class="button" target="_blank"
                                 href="https://www.npmjs.com/package/np-ui-color-picker">NPM</a></p>
@@ -266,8 +262,7 @@
                 </div>
                 <div class="col col-sm-4 col-md-3">
                     <div class="card">
-                        <img alt="no image found"
-                            src="https://raw.githubusercontent.com/NilavPatel/np-time-picker-package/master/src/assets/images/image1.PNG">
+                        <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 time picker component</h4>
                         <p><a class="button" target="_blank"
                                 href="https://www.npmjs.com/package/np-ui-time-picker">NPM</a></p>
