--- a/index.html
+++ b/index.html
@@ -11,28 +11,27 @@
     <link rel="icon" type="image/png" sizes="70x70" href="favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
-        integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
     <script src='js\moment-precise-range.js'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154553414-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-154553414-1');
     </script>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             getExeperience();
         });
 
@@ -66,15 +65,14 @@
                 <li><a href="#SKILLS">SKILLS</a></li>
                 <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
                 <li><a href="#WHERE">WHERE</a></li>
-                <li><a href="doc/Nilav-Resume.docx" target="_blank"><b>RESUME</b></a></li>
+                <li><a href="doc/Nilav-Resume.odt" target="_blank"><b>RESUME</b></a></li>
             </ul>
         </div>
     </nav>
 
     <div class="container-fluid bg-1 text-center" id="WHO">
         <h3>Who Am I?</h3>
-        <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
-            width="350" height="350" alt="no image found">
+        <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel" width="350" height="350" alt="no image found">
         <h3>I am</h3>
         <h1><strong>Nilav Patel</strong></h1>
     </div>
@@ -82,13 +80,10 @@
     <div class="container-fluid bg-2 text-center" id="WHAT">
         <div class="container">
             <h3>What Am I?</h3>
-            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology
-                from L. D. College of Engineering in 2014.</p>
+            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology from L. D. College of Engineering in 2014.</p>
             <div class="horizontal-rule"></div>
             <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer.
-                <br>I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend
-                developer. I love to work with new emerging
-                front end technologies like Angular, Node, jQuery, Javascript. And also love to work with Microsoft
+                <br>I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend developer. I love to work with new emerging front end technologies like Angular, Node, jQuery, Javascript. And also love to work with Microsoft
                 technologies.
             </p>
             <div class="horizontal-rule"></div>
@@ -228,7 +223,7 @@
         <h3>Portfolio</h3>
         <div>
             <div class="row">
-                <div class="col col-sm-4 col-md-3">
+                <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
                         <h4 class="title">Angular 8 admin panel theme with PrimeNG</h4>
@@ -236,58 +231,41 @@
                         </p>
                     </div>
                 </div>
-                <div class="col col-sm-4 col-md-3">
+                <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">Angular 8 data grid component</h4>
-                        <p><a class="button" target="_blank"
-                                href="https://www.npmjs.com/package/np-ui-data-grid">NPM</a></p>
+                        <h4 class="title">Angular 9+ UI components</h4>
+                        <p><a class="button" target="_blank" href="https://www.npmjs.com/package/np-ui-lib">NPM</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4 col-md-3">
+                <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">Angular 8 date picker component</h4>
-                        <p><a class="button" target="_blank"
-                                href="https://www.npmjs.com/package/np-ui-date-picker">NPM</a></p>
-                    </div>
-                </div>
-                <div class="col col-sm-4 col-md-3">
-                    <div class="card">
-                        <img src="images\code.png" alt="no image found">
-                        <h4 class="title">Angular 8 color picker component</h4>
-                        <p><a class="button" target="_blank"
-                                href="https://www.npmjs.com/package/np-ui-color-picker">NPM</a></p>
-                    </div>
-                </div>
-                <div class="col col-sm-4 col-md-3">
-                    <div class="card">
-                        <img src="images\code.png" alt="no image found">
-                        <h4 class="title">Angular 8 time picker component</h4>
-                        <p><a class="button" target="_blank"
-                                href="https://www.npmjs.com/package/np-ui-time-picker">NPM</a></p>
-                    </div>
-                </div>
-                <div class="col col-sm-4 col-md-3">
-                    <div class="card">
-                        <img src="images\code.png" alt="no image found">
-                        <h4 class="title">ADO.Net ORM C# with Unit testing</h4>
+                        <h4 class="title">C# ADO.Net ORM</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/MyORM">Github</a></p>
                     </div>
                 </div>
-                <div class="col col-sm-4 col-md-3">
+                <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">N Layered Application Architecture C#</h4>
+                        <h4 class="title">C# N Layered Application Architecture</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/NLayeredApp">Github</a>
                         </p>
                     </div>
                 </div>
-                <div class="col col-sm-4 col-md-3">
+                <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
                         <h4 class="title">C# design patterns</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/DemoCSharp">Github</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col col-sm-4 col-md-4">
+                    <div class="card">
+                        <img src="images\code.png" alt="no image found">
+                        <h4 class="title">C# guard pattern</h4>
+                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/guard-pattern">Github</a>
                         </p>
                     </div>
                 </div>
