--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script>
         $(document).ready(function() {
             getExeperience();
+            $("#year").html(new Date().getFullYear());
         });
 
         function getExeperience() {
@@ -305,7 +306,7 @@
 
     <footer class="container-fluid bg-4 text-center">
         <p>
-            <div>2019@ Nilav Patel. Made with <span style="color:red;">❤</span></div>
+            <div><span id="year"></span>@ Nilav Patel. Made with <span style="color:red;">❤</span></div>
         </p>
     </footer>
 </body>
