--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h3>Who Am I?</h3>
         <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel" width="350" height="350" alt="no image found">
         <h3>I am</h3>
-        <h1><strong>Nilav Patel</strong></h1>
+        <h1 class="design-text"><strong>Nilav Patel</strong></h1>
     </div>
 
     <div class="container-fluid bg-2 text-center" id="WHAT">
