--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand link-primary"><img src="images/logo-large.png" alt="no image found"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
@@ -81,7 +80,7 @@
     <div class="container-fluid bg-2 text-center" id="WHAT">
         <div class="container">
             <h3>What Am I?</h3>
-            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology from L. D. College of Engineering in 2014.</p>
+            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology from <a href="http://ldce.ac.in/" target="_blank">L. D. College of Engineering</a> in 2014.</p>
             <div class="horizontal-rule"></div>
             <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer.
                 <br>I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend developer. I love to work with new emerging front end technologies like Angular, Node, jQuery, Javascript. And also love to work with Microsoft
@@ -235,7 +234,7 @@
                 <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">Angular 9+ UI components</h4>
+                        <h4 class="title">Angular 10+ UI Components</h4>
                         <p><a class="button" target="_blank" href="https://www.npmjs.com/package/np-ui-lib">NPM</a></p>
                     </div>
                 </div>
@@ -257,15 +256,15 @@
                 <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">C# design patterns</h4>
-                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/DemoCSharp">Github</a>
+                        <h4 class="title">C# CQRS Architecture</h4>
+                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/Todo.CQRS">Github</a>
                         </p>
                     </div>
                 </div>
                 <div class="col col-sm-4 col-md-4">
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
-                        <h4 class="title">C# guard pattern</h4>
+                        <h4 class="title">C# Guard Pattern</h4>
                         <p><a class="button" target="_blank" href="https://github.com/NilavPatel/guard-pattern">Github</a>
                         </p>
                     </div>
