update seo tags

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Nilav Patel - Engineering a software</title>
     <meta charset="utf-8">
     <meta name="description" content="Nilav Patel Portfolio">
-    <meta name="keywords" content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel">
+    <meta name="keywords" content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel, Microsoft, angular, angularjs, asp.net. asp.net core, sql server, sql, core">
     <meta name="author" content="Nilav Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="index,follow">
     <link rel="icon" type="image/png" sizes="70x70" href="favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
