--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <title>Nilav Patel - Engineering a software</title>
     <meta charset="utf-8">
     <meta name="description" content="Nilav Patel Portfolio">
-    <meta name="keywords" content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel, Microsoft, angular, angularjs, asp.net. asp.net core, sql server, sql, core">
+    <meta name="keywords"
+        content="Nilav, Nilav Patel, Software Engineer, Software Development, nilavpatel, Microsoft, angular, angularjs, asp.net. asp.net core, sql server, sql, core">
     <meta name="author" content="Nilav Patel">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index,follow">
     <link rel="icon" type="image/png" sizes="70x70" href="favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"
+        integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
     <script src='js\moment-precise-range.js'></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154553414-1"></script>
@@ -32,9 +37,17 @@
         gtag('config', 'UA-154553414-1');
     </script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             getExeperience();
             $("#year").html(new Date().getFullYear());
+            window.addEventListener('scroll', (event) => {
+                var y = window.scrollY;
+                if (y >= 100) {
+                    $(".top-anchore").show();
+                } else {
+                    $(".top-anchore").hide();
+                }
+            });
         });
 
         function getExeperience() {
@@ -73,7 +86,8 @@
 
     <div class="container-fluid bg-1 text-center" id="WHO">
         <h3>Who Am I?</h3>
-        <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel" width="350" height="350" alt="no image found">
+        <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
+            width="350" height="350" alt="no image found">
         <h3>I am</h3>
         <h1 class="design-text"><strong>Nilav Patel</strong></h1>
     </div>
@@ -81,10 +95,13 @@
     <div class="container-fluid bg-2 text-center" id="WHAT">
         <div class="container">
             <h3>What Am I?</h3>
-            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology from <a href="http://ldce.ac.in/" target="_blank">L. D. College of Engineering</a> in 2014.</p>
+            <p>I am a <b>Software Engineer</b>. I have completed my Bachelor of Engineering in Information Technology
+                from <a href="http://ldce.ac.in/" target="_blank">L. D. College of Engineering</a> in 2014.</p>
             <div class="horizontal-rule"></div>
             <p>I have <b><i id="experience"></i></b> of experience, and currently working as a Senior Software Engineer.
-                <br>I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend developer. I love to work with new emerging front end technologies like Angular, Node, jQuery, Javascript. And also love to work with Microsoft
+                <br>I love to write code, programs, algorithms. I am a passionate frontend and hardcore backend
+                developer. I love to work with new emerging front end technologies like Angular, Node, jQuery,
+                Javascript. And also love to work with Microsoft
                 technologies.
             </p>
             <div class="horizontal-rule"></div>
@@ -98,20 +115,20 @@
             <div class="row">
                 <div class="row ">
                     <div class="col col-sm-3">
-                        <h5>Asp.Net</h5>
-                        <img src="images\aspnet.png" alt="no image found">
+                        <h5>C#</h5>
+                        <img src="images\csharp.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>MVC</h5>
-                        <img src="images\mvc.jpg" alt="no image found">
+                        <img src="images\mvc.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Web API</h5>
-                        <img src="images\webapi.jpg" alt="no image found">
+                        <img src="images\webapi.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
-                        <h5>WCF</h5>
-                        <img src="images\wcf.jpg" alt="no image found">
+                        <h5>Asp.Net Core</h5>
+                        <img src="images\dotnetcore.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
@@ -120,8 +137,8 @@
                         <img src="images\sql.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
-                        <h5>Core</h5>
-                        <img src="images\core.png" alt="no image found">
+                        <h5>Postgre SQL</h5>
+                        <img src="images\postgres.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>HTML</h5>
@@ -135,22 +152,26 @@
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Javascript</h5>
-                        <img src="images\Javascript.png" alt="no image found">
+                        <img src="images\javascript.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>jQuery</h5>
-                        <img src="images\jQuery.png" alt="no image found">
+                        <img src="images\jquery.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Angular</h5>
                         <img src="images\angular.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
-                        <h5>Typescript</h5>
-                        <img src="images\typescript.png" alt="no image found">
+                        <h5>React</h5>
+                        <img src="images\react.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
+                    <div class="col col-sm-3">
+                        <h5>Node JS</h5>
+                        <img src="images\node.png" alt="no image found">
+                    </div>
                     <div class="col col-sm-3">
                         <h5>TFS</h5>
                         <img src="images\tfs.png" alt="no image found">
@@ -160,12 +181,8 @@
                         <img src="images\Github.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
-                        <h5>NPM</h5>
-                        <img src="images\NPM.png" alt="no image found">
-                    </div>
-                    <div class="col col-sm-3">
-                        <h5>Gulp</h5>
-                        <img src="images\Gulp.png" alt="no image found">
+                        <h5>Jira</h5>
+                        <img src="images\jira.png" alt="no image found">
                     </div>
                 </div>
             </div>
@@ -201,7 +218,7 @@
                     <div class="skills-icon"><i class="fa fa-users"></i></div>
                 </div>
                 <div class="col col-sm-4">
-                    <h5>Adaptibility</h5>
+                    <h5>Adaptability</h5>
                     <div class="skills-icon"><i class="fa fa-cogs"></i></div>
                 </div>
                 <div class="col col-sm-4">
@@ -266,7 +283,8 @@
                     <div class="card">
                         <img src="images\code.png" alt="no image found">
                         <h4 class="title">C# Guard Pattern</h4>
-                        <p><a class="button" target="_blank" href="https://github.com/NilavPatel/guard-pattern">Github</a>
+                        <p><a class="button" target="_blank"
+                                href="https://github.com/NilavPatel/guard-pattern">Github</a>
                         </p>
                     </div>
                 </div>
@@ -288,6 +306,7 @@
             </div>
             <div class="col col-sm-2">
                 <a href="http://www.linkedin.com/in/nilav-patel-ba3601b5" class="fab fa-linkedin" target="_blank"></a>
+                <div class="where-text">nilav-patel-ba3601b5</div>
             </div>
             <div class="col col-sm-2">
                 <a href="skype:live:nilavpatel2810?add" class="fab fa-skype"></a>
@@ -295,6 +314,7 @@
             </div>
             <div class="col col-sm-2">
                 <a href="https://github.com/NilavPatel" class="fab fa-github" target="_blank"></a>
+                <div class="where-text">NilavPatel</div>
             </div>
             <div class="col col-sm-1"></div>
         </div>
@@ -306,7 +326,7 @@
 
     <footer class="container-fluid bg-4 text-center">
         <p>
-            <div><span id="year"></span>@ Nilav Patel. Made with <span style="color:red;">❤</span></div>
+        <div>Copyright (c) <span id="year"></span> Nilav Patel. Made with <span style="color:red;">❤</span></div>
         </p>
     </footer>
 </body>
