--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                 <div class="row ">
                     <div class="col col-sm-3">
                         <h5>Javascript</h5>
-                        <img src="images\javascript.png" alt="no image found">
+                        <img src="images\Javascript.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>jQuery</h5>
-                        <img src="images\jquery.png" alt="no image found">
+                        <img src="images\jQuery.png" alt="no image found">
                     </div>
                     <div class="col col-sm-3">
                         <h5>Angular</h5>
