--- a/index.html
+++ b/index.html
@@ -63,33 +63,35 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default" id="top">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#WHO">WHO</a></li>
-                <li><a href="#WHAT">WHAT</a></li>
-                <li><a href="#TOOLS">TOOLS</a></li>
-                <li><a href="#SKILLS">SKILLS</a></li>
-                <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
-                <li><a href="#WHERE">WHERE</a></li>
-                <li><a href="doc/Nilav-Resume.odt" target="_blank"><b>RESUME</b></a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="landing-page">
+        <nav class="navbar navbar-default" id="top">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#WHO">WHO</a></li>
+                    <li><a href="#WHAT">WHAT</a></li>
+                    <li><a href="#TOOLS">TOOLS</a></li>
+                    <li><a href="#SKILLS">SKILLS</a></li>
+                    <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
+                    <li><a href="#WHERE">WHERE</a></li>
+                    <li><a href="doc/Nilav-Resume.odt" target="_blank"><b>RESUME</b></a></li>
+                </ul>
+            </div>
+        </nav>
 
-    <div class="container-fluid bg-1 text-center" id="WHO">
-        <h3>Who Am I?</h3>
-        <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
-            width="350" height="350" alt="no image found">
-        <h3>I am</h3>
-        <h1 class="design-text"><strong>Nilav Patel</strong></h1>
+        <div class="container-fluid bg-1 text-center" id="WHO">
+            <h3>Who Am I?</h3>
+            <img src="images/nilav.jpg" class="img-responsive img-circle" style="display:inline" alt="Nilav Patel"
+                width="350" height="350" alt="no image found">
+            <h3>I am</h3>
+            <h1 class="design-text"><strong>Nilav Patel</strong></h1>
+        </div>
     </div>
 
     <div class="container-fluid bg-2 text-center" id="WHAT">
@@ -114,73 +116,73 @@
         <div class="container">
             <div class="row">
                 <div class="row ">
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>C#</h5>
                         <img src="images\csharp.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>MVC</h5>
                         <img src="images\mvc.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Web API</h5>
                         <img src="images\webapi.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Asp.Net Core</h5>
                         <img src="images\dotnetcore.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>SQL server</h5>
                         <img src="images\sql.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Postgre SQL</h5>
                         <img src="images\postgres.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>HTML</h5>
                         <img src="images\HTML.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>CSS</h5>
                         <img src="images\css.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Javascript</h5>
                         <img src="images\Javascript.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>jQuery</h5>
                         <img src="images\jQuery.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Angular</h5>
                         <img src="images\angular.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>React</h5>
                         <img src="images\react.png" alt="no image found">
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Node JS</h5>
                         <img src="images\node.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>TFS</h5>
                         <img src="images\tfs.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Github</h5>
                         <img src="images\Github.png" alt="no image found">
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col-xs-6 col-sm-3">
                         <h5>Jira</h5>
                         <img src="images\jira.png" alt="no image found">
                     </div>
@@ -209,27 +211,27 @@
         <h3>What Are My Skills?</h3>
         <div class="container">
             <div class="row">
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Commitment</h5>
                     <div class="skills-icon"><i class="fa fa-hands-helping"></i></div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Team Work</h5>
                     <div class="skills-icon"><i class="fa fa-users"></i></div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Adaptability</h5>
                     <div class="skills-icon"><i class="fa fa-cogs"></i></div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Self Learning</h5>
                     <div class="skills-icon"><i class="fa fa-chalkboard-teacher"></i></div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Punctuality</h5>
                     <div class="skills-icon"><i class="fa fa-stopwatch"></i></div>
                 </div>
-                <div class="col col-sm-4">
+                <div class="col-xs-6 col-sm-4">
                     <h5>Responsibility</h5>
                     <div class="skills-icon"><i class="fa fa-user-tie"></i></div>
                 </div>
