add images again

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-3">
                         <h5>Github</h5>
-                        <img src="images\Github.png" alt="no image found">
+                        <img src="images\github.png" alt="no image found">
                     </div>
                     <div class="col-xs-6 col-sm-3">
                         <h5>Jira</h5>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="col col-sm-6">
                     <h3>Waterfall</h3>
-                    <img class="large-img" src="images\Waterfall.png" alt="no image found">
+                    <img class="large-img" src="images\waterfall.png" alt="no image found">
                 </div>
             </div>
         </div>
