--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col-xs-6 col-sm-3">
                         <h5>HTML</h5>
-                        <img src="images\HTML.png" alt="no image found">
+                        <img src="images\html.png" alt="no image found">
                     </div>
                     <div class="col-xs-6 col-sm-3">
                         <h5>CSS</h5>
