--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <li><a href="#SKILLS">SKILLS</a></li>
                     <li><a href="#PORTFOLIO">PORTFOLIO</a></li>
                     <li><a href="#WHERE">WHERE</a></li>
-                    <li><a href="doc/Nilav-Resume.odt" target="_blank"><b>RESUME</b></a></li>
+                    <li><a href="doc/nilav-patel-resume.pdf" target="_blank"><b>RESUME</b></a></li>
                 </ul>
             </div>
         </nav>
